--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/ic_launcher-playstore.webp
+    - assets/images/enable_bluetooth.webp
+    - assets/images/enable_device.webp
+    - assets/images/require_location.webp
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
