--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  flutter_blue: ^0.7.3
-  syncfusion_flutter_charts: ^18.4.34
+  flutter_blue: 0.7.3
+  bluetooth_enable: 0.1.1
+  geolocation: 1.1.2
+  syncfusion_flutter_charts: 18.4.34
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +51,7 @@ flutter:
     - assets/images/ic_launcher-playstore.webp
     - assets/images/enable_bluetooth.webp
     - assets/images/enable_device.webp
-    - assets/images/require_location.webp
+    - assets/images/enable_location.webp
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
