--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
+    - assets/images/ic_launcher.webp
     - assets/images/ic_launcher-playstore.webp
     - assets/images/enable_bluetooth.webp
     - assets/images/enable_device.webp
