--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tendon_loader
-description: A bluetooth based tendon injury monitoring application. 
+description: A bluetooth based tendon injury monitoring application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -25,13 +25,15 @@ dependencies:
     sdk: flutter
 
 
+  location: ^4.1.1
+  flutter_blue: ^0.7.3
+  bluetooth_enable: ^0.1.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  flutter_blue: 0.7.3
-  bluetooth_enable: 0.1.1
-  location: 3.2.4
-  syncfusion_flutter_charts: 18.4.34
+  path_provider: ^2.0.1
+  syncfusion_flutter_charts: ^18.4.47
+  syncfusion_flutter_xlsio: ^18.4.47-beta
 
 dev_dependencies:
   flutter_test:
