--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  numberpicker: ^2.0.0
   path_provider: ^2.0.1
   syncfusion_flutter_charts: ^18.4.47
   syncfusion_flutter_xlsio: ^18.4.47-beta
