--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   google_sign_in: ^5.0.0
   local_auth: ^1.1.0
   firebase_analytics: ^7.1.1
+  sqflite:
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +60,17 @@ flutter:
     - assets/images/enable_bluetooth.webp
     - assets/images/enable_device.webp
     - assets/images/enable_location.webp
+    - assets/images/login_bg.jpg
+    - assets/images/avater_01.png
+    - assets/images/loading_01.gif
+    - assets/images/loading_02.gif
+    - assets/database/ifriends.s3db
+    - assets/images/img_avatar3.jpg
+    - assets/images/screen_bg2.png
+    - assets/images/home_bg.jpg
+    - assets/images/loading_01.gif
+    - assets/images/loading_02.gif
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
