--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,96 +1,40 @@
 name: tendon_loader
 description: A bluetooth based tendon injury monitoring application.
-
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
-
 environment:
   sdk: ">=2.7.0 <3.0.0"
-
 dependencies:
   flutter:
     sdk: flutter
-
   rxdart: ^0.24.0
   location: ^4.1.1
+  sqflite: ^2.0.0+3
+  local_auth: ^1.1.0
   flutter_blue: ^0.7.3
-  bluetooth_enable: ^0.1.1
-  cupertino_icons: ^1.0.0
   numberpicker: ^2.0.1
   path_provider: ^2.0.1
-  syncfusion_flutter_charts: ^18.4.47
-  syncfusion_flutter_xlsio: ^18.4.47-beta
   firebase_auth: ^1.0.1
   google_sign_in: ^5.0.0
-  local_auth: ^1.1.0
+  cupertino_icons: ^1.0.0
+  bluetooth_enable: ^0.1.1
+  firebase_storage: ^8.0.0
   firebase_analytics: ^7.1.1
-  sqflite:
-  shared_preferences:
-
+  shared_preferences: ^2.0.5
+  syncfusion_flutter_charts: ^18.4.47
+  syncfusion_flutter_xlsio: ^18.4.47-beta
 dev_dependencies:
+  pedantic: ^1.11.0
+  effective_dart: ^1.3.0
   flutter_test:
     sdk: flutter
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
   assets:
     - assets/database/ifriends.s3db
-
     - assets/images/ic_launcher.png
     - assets/images/ic_launcher-playstore.png
     - assets/images/enable_bluetooth.png
     - assets/images/enable_device.png
     - assets/images/enable_location.png
     - assets/images/male_avatar.webp
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
