--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,33 +1,40 @@
 name: tendon_loader
 description: A bluetooth based tendon injury monitoring application.
+
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+
 version: 1.0.0+1
+
 environment:
   sdk: ">=2.7.0 <3.0.0"
+
 dependencies:
+  bluetooth_enable: ^0.1.1
+  cupertino_icons: ^1.0.0
+  firebase_analytics: ^7.1.1
+  firebase_auth: ^1.0.1
+  firebase_storage: ^8.0.0
   flutter:
     sdk: flutter
-  rxdart: ^0.24.0
-  location: ^4.1.1
-  sqflite: ^2.0.0+3
-  local_auth: ^1.1.0
   flutter_blue: ^0.7.3
+  google_sign_in: ^5.0.0
+  intl: ^0.17.0
+  local_auth: ^1.1.0
+  location: ^4.1.1
   numberpicker: ^2.0.1
   path_provider: ^2.0.1
-  firebase_auth: ^1.0.1
-  google_sign_in: ^5.0.0
-  cupertino_icons: ^1.0.0
-  bluetooth_enable: ^0.1.1
-  firebase_storage: ^8.0.0
-  firebase_analytics: ^7.1.1
+  rxdart: ^0.24.0
   shared_preferences: ^2.0.5
+  sqflite: ^2.0.0+3
   syncfusion_flutter_charts: ^18.4.47
   syncfusion_flutter_xlsio: ^18.4.47-beta
+
 dev_dependencies:
-  pedantic: ^1.11.0
   effective_dart: ^1.3.0
   flutter_test:
     sdk: flutter
+  pedantic: ^1.11.0
+
 flutter:
   uses-material-design: true
   assets:
