--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     implementation "androidx.multidex:multidex:2.0.1"
     implementation platform('com.google.firebase:firebase-bom:26.7.0')
     implementation 'com.google.firebase:firebase-analytics'
+    api "androidx.core:core:1.3.2"
 }
