--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   bluetooth_enable: ^0.1.1
   cupertino_icons: ^1.0.0
-  firebase_analytics: ^7.1.1
+#  firebase_analytics: ^7.1.1
   firebase_auth: ^1.0.1
   firebase_storage: ^8.0.0
   flutter:
@@ -28,6 +28,7 @@ dependencies:
   sqflite: ^2.0.0+3
   syncfusion_flutter_charts: ^18.4.47
   syncfusion_flutter_xlsio: ^18.4.47-beta
+  url_launcher: ^6.0.3
 
 dev_dependencies:
   effective_dart: ^1.3.0
