--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,15 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_blue: ^0.7.3
+  flutter_svg: ^0.19.3
   google_sign_in: ^5.0.0
+  hive: ^1.5.0-pre
+  hive_flutter: ^0.3.1
   intl: ^0.17.0
   local_auth: ^1.1.0
   location: ^4.1.1
   numberpicker: ^2.0.1
-  path_provider: ^2.0.1
+  path_provider: ^1.0.0
   rxdart: ^0.24.0
   shared_preferences: ^2.0.5
   sqflite: ^2.0.0+3
@@ -31,7 +34,6 @@ dependencies:
   url_launcher: ^6.0.3
 
 dev_dependencies:
-  effective_dart: ^1.3.0
   flutter_test:
     sdk: flutter
   pedantic: ^1.11.0
@@ -39,7 +41,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/app_logo.png
+    - assets/images/app_logo.svg
     - assets/images/enable_device.png
     - assets/images/enable_location.png
     - assets/images/enable_bluetooth.png
