--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,8 @@ environment:
   sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
-  bluetooth_enable: ^0.1.1
   cloud_firestore: ^1.0.4
+  connectivity: 3.0.3
   cupertino_icons: ^1.0.0
 #  firebase_analytics: ^7.1.1
   firebase_auth: ^1.0.1
@@ -16,18 +16,15 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_blue: ^0.8.0
+  flutter_bluetooth_serial: ^0.2.2
   flutter_svg: ^0.21.0+1
-  google_sign_in: ^5.0.0
   hive: ^2.0.2
   hive_flutter: ^1.0.0
   intl: ^0.17.0
-  local_auth: ^1.1.0
   location: ^4.1.1
   numberpicker: ^2.0.1
   path_provider: ^2.0.1
   rxdart: ^0.26.0
-  shared_preferences: ^2.0.5
-  sqflite: ^2.0.0+3
   syncfusion_flutter_charts: ^19.1.56
   syncfusion_flutter_xlsio: ^19.1.56-beta
   url_launcher: ^6.0.3
