--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -5,7 +5,7 @@ name: Deploy to Firebase Hosting on merge
 'on':
   push:
     branches:
-      - host
+      - firebase-live
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -16,7 +16,7 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TENDON_LOADER }}'
-          channelId: live
+          channelId: preview-1
           projectId: tendon-loader
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
