--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,11 +17,11 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
-      - name: Run flutter pub get
+      - name: 'Run flutter pub get'
         run: flutter pub get
-      - name: Build Web App
+      - name: 'Build Web App'
         run: flutter build web
-      - name: Deploy to Firebase Hosting
+      - name: 'Deploy to Firebase Hosting'
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
