--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,7 +16,7 @@ jobs:
           java-version: '12.x'
       - uses: subosito/flutter-action@v1
         with:
-          channel: 'stable'
+          flutter-version: '2.0.4'
       - name: 'Run flutter pub get'
         run: flutter pub get
       - name: 'Build Web App'
