--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,18 +8,18 @@ environment:
 
 dependencies:
   cloud_firestore: ^1.0.4
-  connectivity: 3.0.3
+  connectivity: ^3.0.3
   cupertino_icons: ^1.0.0
   firebase_auth: ^1.0.1
   flutter:
     sdk: flutter
   flutter_blue: ^0.8.0
-  flutter_bluetooth_serial: ^0.2.2
+#  flutter_bluetooth_serial: ^0.2.2
   flutter_svg: ^0.21.0+1
   hive: ^2.0.2
   hive_flutter: ^1.0.0
   intl: ^0.17.0
-  location: ^4.1.1
+#  location: ^4.1.1
   numberpicker: ^2.0.1
   path_provider: ^2.0.1
   rxdart: ^0.26.0
