update web portal

--- a/assets/bak_files/build.yml
+++ b/assets/bak_files/build.yml
@@ -2,10 +2,10 @@ name: build
 on:
   push:
     branches:
-      - master
+      - hosting
   pull_request:
     branches:
-      - master
+      - hosting
 
 jobs:
   build:
