--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:fullBackupContent="@xml/backup_content"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:theme="@android:style/Theme.Black.NoTitleBar"
         android:usesCleartextTraffic="true"
         tools:ignore="UnusedAttribute">
         <activity
