--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,7 +42,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionName 'flutterVersionName'
         multiDexEnabled true
     }
 
@@ -63,11 +63,11 @@ android {
             // By default all ABIs are included, so use reset() and include to specify that we only
             // want APKs for x86 and x86_64.
             // Resets the list of ABIs that Gradle should create APKs for to none.
-            // reset()
+            reset()
             // Specifies a list of ABIs that Gradle should create APKs for.
-            // include "armeabi-v7a", "arm64-v8a"
+            include "arm64-v8a"
             // Specifies that we do not want to also generate a universal APK that includes all ABIs.
-            universalApk true
+            // universalApk true
         }
     }
 
@@ -78,6 +78,7 @@ android {
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt')
             multiDexEnabled true
+            minifyEnabled true
         }
     }
 }
@@ -87,7 +88,7 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.0"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.0'
     implementation "androidx.multidex:multidex:2.0.1"
     implementation platform('com.google.firebase:firebase-bom:26.7.0')
     api "androidx.core:core-ktx:1.3.2"
