before applying suggestions

--- a/android/keystore.properties
+++ b/android/keystore.properties
@@ -1,4 +1,4 @@
-storePassword="TendonLoader@123456"
-keyPassword="TendonLoader@123456"
-storeFile="tendonloaderkey.jks"
-keyAlias="tlkey"
+storePassword=TendonLoader@123456
+keyPassword=TendonLoader@123456
+storeFile=tendonloaderkey.jks
+keyAlias=tlkey
