--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,10 +50,10 @@ android {
 
     signingConfigs {
         release {
-            keyAlias 'keystoreProperties[\'keyAlias\']'
-            keyPassword 'keystoreProperties[\'keyPassword\']'
-            storeFile file('keystoreProperties[\'storeFile\']')
-            storePassword 'keystoreProperties[\'storePassword\']'
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
 
             enableV3Signing true
             enableV4Signing true
@@ -68,17 +68,26 @@ android {
             // By default all ABIs are included, so use reset() and include to specify that we only
             // want APKs for x86 and x86_64.
             // Resets the list of ABIs that Gradle should create APKs for to none.
-            reset()
+            // reset()
             // Specifies a list of ABIs that Gradle should create APKs for.
-            include "arm64-v8a"
+            // include "arm64-v8a"
             // Specifies that we do not want to also generate a universal APK that includes all ABIs.
             universalApk true
+        }
+
+        // Configures multiple APKs based on screen density.
+        density {
+            // Configures multiple APKs based on screen density.
+            enable true
+            // Specifies a list of screen densities Gradle should not create multiple APKs for.
+            // exclude "ldpi", "xxhdpi", "xxxhdpi"
+            // Specifies a list of compatible screen size settings for the manifest.
+            compatibleScreens 'small', 'normal', 'large', 'xlarge'
         }
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt')
