--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://www.dartlang.org/guides/libraries/private-files
 
+# Files and directories created by firebase
+.firebase/
+
+.vscode/
+
 # Files and directories created by pub
 .dart_tool/
 .packages
