--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   app_settings: ^4.1.0
+  audioplayers: ^0.19.0
   cloud_firestore: ^2.2.0
   connectivity: ^3.0.3
   cupertino_icons: ^1.0.0
@@ -22,14 +23,14 @@ dependencies:
   syncfusion_flutter_xlsio: ^19.1.56-beta
 
   tendon_support_lib:
-    # path: ../tendon_support_lib
-    git:
-      url: https://github.com/mitulvaghamshi/tendon_support_lib.git
+    path: ../tendon_support_lib
+    # git:
+    #   url: https://github.com/mitulvaghamshi/tendon_support_lib.git
 
   tendon_support_module:
-    # path: ../tendon_support_module
-    git:
-      url: https://github.com/mitulvaghamshi/tendon_support_module.git
+    path: ../tendon_support_module
+    # git:
+    #   url: https://github.com/mitulvaghamshi/tendon_support_module.git
 
   wakelock: ^0.5.2
 
@@ -43,7 +44,6 @@ flutter:
   assets:
     - assets/audio/stop.mpeg
     - assets/audio/start.mpeg
-    - assets/images/app_logo.svg
     - assets/images/enable_device.png
     - assets/images/enable_location.png
     - assets/images/enable_bluetooth.png
