--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: tendon_loader
 description: A bluetooth based tendon injury monitoring application.
-publish_to: 'none'
-version: 0.0.3-preview+3
+publish_to: "none"
+version: 0.0.4-preview+4 # already published to playstore
 
 environment:
-  sdk: '>=2.13.0 <3.0.0'
+  sdk: ">=2.13.0 <3.0.0"
 
 dependencies:
   app_settings: ^4.1.0
@@ -12,21 +12,24 @@ dependencies:
   cloud_firestore: ^2.2.0
   connectivity: ^3.0.3
   cupertino_icons: ^1.0.0
+  firebase_auth: ^1.0.1
   flutter:
     sdk: flutter
   flutter_blue: ^0.8.0
+  flutter_svg: ^0.22.0
   hive: ^2.0.2
+  hive_flutter: ^1.0.0
   intl: ^0.17.0
   location: ^4.1.1
+  numberpicker: ^2.0.1
+  provider: ^5.0.0
   rxdart: ^0.26.0
   syncfusion_flutter_charts: ^19.1.66+1
-  syncfusion_flutter_xlsio: ^19.1.66-beta 
-
-  tendon_support_lib:
-    path: ../tendon_support_lib
+  syncfusion_flutter_xlsio: ^19.1.66-beta
+  tendon_loader_lib:
+    path: ../tendon_loader_lib
     # git:
-    #   url: https://github.com/mitulvaghamshi/tendon_support_lib.git
-
+    #   url: https://github.com/mitulvaghamshi/tendon_loader_lib.git
   wakelock: ^0.5.2
 
 dev_dependencies:
@@ -39,6 +42,7 @@ flutter:
   assets:
     - assets/audio/stop.mpeg
     - assets/audio/start.mpeg
+    - assets/images/app_logo.svg
     - assets/images/enable_device.png
     - assets/images/enable_location.png
     - assets/images/enable_bluetooth.png
