--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -25,7 +25,12 @@
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>This app uses bluetooth to communicate with your Progressor.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Scanning for Bluetooth devices can be used to locate you. That's why we ask you to permit Location services. We're only using this permission to scan for your Progressor. We'll never collect your physical location.</string>
+	<string>Scanning for Bluetooth devices can be used to locate you. That&apos;s why we ask you to permit Location services. We&apos;re only using this permission to scan for your Progressor. We&apos;ll never collect your physical location.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-central</string>
+		<string>fetch</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
