--- a/firebase.json
+++ b/firebase.json
@@ -5,12 +5,15 @@
   },
   "emulators": {
     "auth": {
+      "host": "10.0.0.107",
       "port": 9099
     },
     "firestore": {
+      "host": "10.0.0.107",
       "port": 8080
     },
     "ui": {
+      "host": "10.0.0.107",
       "enabled": true
     }
   }
