--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,6 @@ dependencies:
   flutter_svg: ^0.22.0
   hive: ^2.0.2
   hive_flutter: ^1.0.0
-  intl: ^0.17.0
   location: ^4.1.1
   rxdart: ^0.26.0
   syncfusion_flutter_charts: ^19.1.66+1
@@ -27,8 +26,10 @@ dependencies:
   wakelock: ^0.5.2
 
 dev_dependencies:
+  build_runner: ^2.0.5
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.1.0
   pedantic: ^1.11.0
 
 flutter:
