--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   app_settings: ^4.1.0
+  archive: ^3.1.2
   audioplayers: ^0.19.0
   cloud_firestore: ^2.2.0
   connectivity: ^3.0.3
