layout fix for small screen devices

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,4 @@
+# org.gradle.java.home=/Applications/Android\ Studio.app/Contents/jre/Contents/Home
 org.gradle.jvmargs=-Xmx1536m -XX:+UseParallelGC
 android.useAndroidX=true
 android.enableJetifier=true
