--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,17 @@
 name: tendon_loader
 description: A bluetooth based tendon injury monitoring application.
 publish_to: "none"
-version: 0.0.7+7 # 
+version: 0.0.8+8 # 
 
 environment:
   sdk: ">=2.13.0 <3.0.0"
-
+  flutter: ^2.2.3
+  
 dependencies:
   app_settings: ^4.1.0
   archive: ^3.1.2
   audioplayers: ^0.19.0
-  cloud_firestore: ^2.2.0
+  cloud_firestore: ^2.3.0
   connectivity: ^3.0.3
   cupertino_icons: ^1.0.0
   firebase_auth: ^2.0.0
@@ -22,8 +23,8 @@ dependencies:
   hive_flutter: ^1.0.0
   location: ^4.1.1
   rxdart: ^0.26.0
-  syncfusion_flutter_charts: ^19.2.46+1
-  syncfusion_flutter_xlsio: ^19.2.46-beta
+  syncfusion_flutter_charts: ^19.2.47
+  syncfusion_flutter_xlsio: ^19.2.47-beta
   wakelock: ^0.5.2
 
 dev_dependencies:
