--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -131,7 +131,7 @@ linter:
     # - public_member_api_docs # enabled on a case-by-case basis; see e.g. packages/analysis_options.yaml
     - sized_box_for_whitespace
     - sort_constructors_first
-    - sort_pub_dependencies # prevents separating pinned transitive dependencies
+    # - sort_pub_dependencies # prevents separating pinned transitive dependencies
     - sort_unnamed_constructors_first
     - test_types_in_equals
     - throw_in_finally
