--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>534221336745-4njd506dbgfhclqou203hi64h0m3qu2t.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.534221336745-4njd506dbgfhclqou203hi64h0m3qu2t</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>534221336745-2peccj42jr1dt1hdu786hga4gh8qul2b.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDDvSgqAgWOPzPMaBw9EXUvHzR1PrgNPYM</string>
 	<key>GCM_SENDER_ID</key>
