--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,17 +3,17 @@
 	"tasks": [
 		{
 			"type": "shell",
-			"label": "project: clean",
-			"command": "flutter clean",
+			"label": "flutter: clean",
+			"command": "flutter clean"
 		},
 		{
 			"type": "shell",
-			"label": "project: pub get",
-			"command": "flutter pub get",
+			"label": "flutter: pub get",
+			"command": "flutter pub get"
 		},
 		{
 			"type": "shell",
-			"label": "project: pod install",
+			"label": "ios: pod install",
 			"command": "pod install",
 			"options": {
 				"cwd": "${workspaceFolder}/ios"
@@ -24,10 +24,10 @@
 			"label": "project: rebuild",
 			"dependsOrder": "sequence",
 			"dependsOn": [
-				"project: clean",
-				"project: pub get",
-				"project: pod install",
-			],
+				"flutter: clean",
+				"flutter: pub get",
+				"ios: pod install"
+			]
 		},
 		{
 			"type": "shell",
@@ -57,5 +57,21 @@
 			"problemMatcher": [],
 			"label": "release: appbundle"
 		},
+		{
+			"type": "flutter",
+			"command": "flutter",
+			"args": [
+				"pub",
+				"run",
+				"build_runner",
+				"build",
+				"--delete-conflicting-outputs"
+			],
+			"problemMatcher": [
+				"$dart-build_runner"
+			],
+			"group": "build",
+			"label": "build_runner: build -d"
+		}
 	],
 }
