--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ publish_to: 'none'
 version: 0.1.0+13
 
 environment:
-  sdk: ">=2.13.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -38,9 +38,9 @@ dependencies:
   connectivity: ^3.0.3
   location: ^4.1.1
   archive: ^3.1.2
-  audioplayers: ^0.19.0
+  audioplayers: ^0.20.1
   app_settings: ^4.1.0
-  flutter_svg: ^0.22.0
+  flutter_svg: ^0.23.0+1
   rxdart: ^0.26.0
   wakelock: ^0.5.2
   hive: ^2.0.2
