--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: tendon_loader
 description: Tendon Loader is designed to measure and help cure Achille's (uh-KILL-eez) Tendon Problems.
 publish_to: 'none'
-version: 1.0.0+15
+version: 1.0.0+16
 
 environment:
-  sdk: ">=2.19.0 <3.0.0"
+  sdk: ^3.0.1
 
 dependencies:
   app_settings: ^4.2.0
@@ -18,11 +18,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_blue: ^0.8.0
-  flutter_svg: ^1.1.6
-  go_router: ^7.0.0
+  flutter_svg: ^2.0.6
+  go_router: ^8.0.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  intl: ^0.17.0
+  intl: ^0.18.0
   location: ^4.4.0
   rxdart: ^0.26.0
   syncfusion_flutter_charts: ^21.2.4
