Remove all FKeys; Add SwaggerUI

--- a/TendonLoaderApi/Properties/launchSettings.json
+++ b/TendonLoaderApi/Properties/launchSettings.json
@@ -4,16 +4,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:8899",
+      "applicationUrl": "http://192.168.0.113:8899",
       "sslPort": 0
     }
   },
   "profiles": {
     "http": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "/api",
-      "applicationUrl": "http://localhost:5082",
+      "launchBrowser": false,
+      "launchUrl": "api",
+      "applicationUrl": "http://192.168.0.113:5082",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "/api",
+      "launchUrl": "api",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
