--- a/tendon_loader/pubspec.yaml
+++ b/tendon_loader/pubspec.yaml
@@ -1,14 +1,14 @@
 name: tendon_loader
 description: Tendon Loader is designed to measure and help cure Achille's (uh-KILL-eez) Tendon Problems.
 publish_to: 'none'
-version: 1.0.0+17
+version: 1.0.0+18
 
 environment:
-  sdk: ^3.0.1
+  sdk: ^3.7.0
 
 dependencies:
-  app_settings: ^5.0.0
-  archive: ^3.3.8
+  app_settings: ^6.1.1
+  archive: ^4.0.5
   connectivity_plus: ^6.0.3
   cupertino_icons: ^1.0.5
   flutter:
@@ -17,18 +17,19 @@ dependencies:
   flutter_svg: ^2.0.6
   go_router: ^14.1.3
   http: ^1.1.0
-  intl: ^0.19.0
-  location: ^6.0.2
+  intl: ^0.20.2
+  location: ^8.0.0
   rxdart: ^0.26.0 # find alternative
-  syncfusion_flutter_charts: ^26.1.35
-  syncfusion_flutter_xlsio: ^26.1.35
+  syncfusion_flutter_charts: ^28.2.12
+  syncfusion_flutter_xlsio: ^28.2.12
 
 dev_dependencies:
   build_runner: ^2.3.3
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   go_router_builder: ^2.0.0
+  test: ^1.25.15
 
 flutter:
   uses-material-design: true
